# TomoXRD

./: .gitattributes  .gitignore  MANIFEST.in  README.md  TomoXRD.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
tomoxrd/: __init__.py  _version.py
tomoxrd/assets/qss/: collection_points.qss  collection_settings.qss  collection_status.qss  detector_settings.qss  filename_settings.qss  main.qss
tomoxrd/controller/: __init__.py  collection_status_controller.py  detector_settings_controller.py  filename_controller.py  main_controller.py  scanning_controller.py
tomoxrd/model/: __init__.py  bmd_model.py  detector_settings_model.py  epics_model.py  event_filter_model.py  main_model.py  path_model.py  pv_model.py  qt_worker_model.py  scanning_model.py
tomoxrd/util/: __init__.py  settings_util.py
tomoxrd/widget/: __init__.py  collection_points_widget.py  collection_settings_widget.py  collection_status_widget.py  detector_settings_widget.py  filename_settings_widget.py  main_widget.py
tomoxrd/widget/custom/: __init__.py  buttons.py  comboboxes.py  input_boxes.py  labels.py  msg_box.py  spinboxes.py  tables.py
