# ----------------------------------------------------------------------
# TomoXRD - TomoXRD Collection GUI Software.
# Author: Christofanis Skordas (skordasc@uchicago.edu)
# Copyright (C) 2022  GSECARS, The University of Chicago
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# ----------------------------------------------------------------------

[metadata]
name = TomoXRD
author = Christofanis Skordas
author_email = skordasc@uchicago.edu
description = TomoXRD Collection GUI Software.
license_file = LICENSE
long_description = file: README.mb
long_description_content_type = text/markdown
url = https://github.com/skordaschristofanis/TomoXRD
project_urls =
    Bug Tracker = https://github.com/skordaschristofanis/TomoXRD/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering

[options]
packages =
    tomoxrd
install_requires =
    numpy>=1.23.1
    pyepics>=3.5.1
    PyQt5>=5.15.7
    pywin32>=304
    qtpy>=2.1.0
python_requires = >=3.10
package_dir =
    =.
zip_safe = no

[versioneer]
VCS = git
style = pep440
versionfile_source = tomoxrd/_version.py
versionfile_build = tomoxrd/_version.py
tag_prefix = ''
parentdir_prefix = ''
